Add firebase, icon, title

--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <h1>Test</h1>
+<html lang="nl">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>SmetsLijst</title>
+    <link rel="icon" href="icon.ico">
+    <script type="importmap">
+      {
+        "imports": {
+          "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js"
+        }
+      }
+    </script>
+
+  </head>
+  <body>
+    <h1>Test</h1>
+    <div id="head"></div>
+
+    <script src="main.js"></script>
+  </body>
 </html>
